logs/dag_id=Weather_DAG_V2.4/run_id=scheduled__2024-02-09T081600+0000/task_id=data_to_db/attempt=1.log
[2024-02-09T12:47:13.170+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG_V2.4.data_to_db scheduled__2024-02-09T08:16:00+00:00 [queued]>
[2024-02-09T12:47:13.270+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG_V2.4.data_to_db scheduled__2024-02-09T08:16:00+00:00 [queued]>
[2024-02-09T12:47:13.280+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 2
[2024-02-09T12:47:13.398+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): data_to_db> on 2024-02-09 08:16:00+00:00
[2024-02-09T12:47:13.407+0000] {standard_task_runner.py:60} INFO - Started process 12721 to run task
[2024-02-09T12:47:13.435+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG_V2.4', 'data_to_db', 'scheduled__2024-02-09T08:16:00+00:00', '--job-id', '3904', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmp8_z3lz6m']
[2024-02-09T12:47:13.439+0000] {standard_task_runner.py:88} INFO - Job 3904: Subtask data_to_db
[2024-02-09T12:47:13.686+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG_V2.4.data_to_db scheduled__2024-02-09T08:16:00+00:00 [running]> on host 06573eafe810
[2024-02-09T12:47:14.361+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG_V2.4' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-09T08:16:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-09T08:16:00+00:00'
[2024-02-09T12:47:14.416+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-09T12:47:14.474+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/Weather_dag.py", line 72, in csv_db
    hook.insert_rows(table='weather_tab', rows=CSV_DATA)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 541, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: ... weather_tab  VALUES ('U','n','n','a','m','e','d',':',' ','0...
                                                             ^

[2024-02-09T12:47:14.572+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=Weather_DAG_V2.4, task_id=data_to_db, execution_date=20240209T081600, start_date=20240209T124713, end_date=20240209T124714
[2024-02-09T12:47:14.622+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 3904 for task data_to_db (INSERT has more expressions than target columns
LINE 1: ... weather_tab  VALUES ('U','n','n','a','m','e','d',':',' ','0...
                                                             ^
; 12721)
[2024-02-09T12:47:14.687+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-09T12:47:14.756+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
